# calc-notifier

./: .gitignore  README.md  config.example.json  demo.py  pyproject.toml  requirements.txt
calc_notifier/: core.py  telegram.py  telegram_client.py  utils.py
calc_notifier_history/: tg_state.json
calc_notifier_history/report_20251107T125659Z_19833/: meta.json
calc_notifier_history/report_20251107T125750Z_70640/: meta.json
calc_notifier_history/report_20251107T130020Z_20323/: meta.json
calc_notifier_history/report_20251107T130045Z_45843/: meta.json
calc_notifier_history/report_20251107T130111Z_71391/: meta.json
calc_notifier_history/report_20251107T130136Z_96856/: test.txt
demo/: demo.py
src/calc_notifier/: __init__.py  config.py  core.py  styles.py  telegram_client.py  utils.py
