[tool.poetry]
name = "calc_notifier"
version = "0.1.0"
description = "Simple notifier for monitoring status of any long computations: Prometheus + Telegram + local_logging"
authors = ["loginov.artem@phystech.edu"]


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31"
prometheus-client = "^0.16"
matplotlib = "^3.8"
Pillow = "^9.5"


# optional
reportlab = {version = "^4.0", optional = true}


[tool.poetry.extras]
pdf = ["reportlab"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"